Add testimonials section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@ layout: home
 section: home
 ---
 
-<!-- About Section-->
 <section class="page-section pb-0" id="about">
     <div class="container">
         <h2 class="page-section-heading text-center text-uppercase">About</h2>
@@ -35,7 +34,6 @@ section: home
     </div>
 </section>
 
-<!-- Previous Companies Section-->
 <section class="page-section pb-0" id="companies">
     <div class="container">
         <h2 class="page-section-heading text-center text-uppercase">Previous Companies</h2>
@@ -67,8 +65,7 @@ section: home
     </div>
 </section>
 
-<!-- Ways I Can Help Section-->
-<section class="page-section" id="help">
+<section class="page-section pb-0" id="help">
     <div class="container">
         <h2 class="page-section-heading text-center text-uppercase">Ways I Can Help</h2>
         <div class="divider-custom">
@@ -82,13 +79,70 @@ section: home
                     <li>Product development (turning ideas into reality)</li>
                     <li>Technical strategy, architecture & roadmap</li>
                     <li>Hiring the right people (internal or outsourced)</li>
-                    <li>Modernizing existing technology or processes</li>
+                    <li>Modernizing existing technology or processes (moving off spreadsheets)</li>
                     <li>Scaling products for growth</li>
                     <li>Technical due diligence</li>
-                    <li>Infrastructure/cloud setup and management (hosting)</li>
+                    <li>Infrastructure/cloud setup and management (AWS)</li>
                     <li>Implementing software development best practices</li>
                     <li>Representing your technology (to customers, investors, board members etc)</li>
                 </ul>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="page-section" id="testimonials">
+    <div class="container">
+        <h2 class="page-section-heading text-center text-uppercase">Testimonials</h2>
+        <div class="divider-custom">
+            <div class="divider-custom-line"></div>
+            <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+            <div class="divider-custom-line"></div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <div id="carouselTestimonials" class="carousel carousel-dark slide">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <figure>
+                            <blockquote class="blockquote">
+                                <p>&ldquo;Jason's unwavering commitment to our mission and his collaborative approach have truly set him apart. His ability to translate vision into action, secure crucial resources and build high-performing teams sets him apart as a true leader in the industry. From day one, Jason's leadership and guidance has been invaluable to our success.&rdquo;</p>
+                            </blockquote>
+                            <figcaption class="blockquote-footer">
+                              Philip, Founder <cite>Hirely Health</cite>
+                            </figcaption>
+                          </figure>
+                      </div>
+                      <div class="carousel-item">
+                        <figure>
+                            <blockquote class="blockquote">
+                              <p>&ldquo;I cannot recommend Jason highly enough. When my CRM supplier unexpectedly went out of business, Jason stepped in and crafted a bespoke CRM system tailored precisely to meet the unique workflows and data requirements of my business. The fact that he was able to accomplish this feat within the tight timeframe is a testament to his expertise and dedication.&rdquo;</p>
+                            </blockquote>
+                            <figcaption class="blockquote-footer">
+                              Leon, Founder <cite>LJM Recruitment</cite>
+                            </figcaption>
+                          </figure>
+                      </div>
+                      <div class="carousel-item">
+                        <figure>
+                            <blockquote class="blockquote">
+                              <p>&ldquo;Working with Jason has been a fantastic experience. His technical ability is truly impressive. He consistently showcased strong problem-solving skills, tackling challenges with creativity and expertise. It's clear that he is not just skilled but also passionate about his work. I highly recommend Jason for any project that requires top-notch technical proficiency.&rdquo;</p>
+                            </blockquote>
+                            <figcaption class="blockquote-footer">
+                              Kamal, Software Engineer
+                            </figcaption>
+                          </figure>
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselTestimonials" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselTestimonials" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </div>
         </div>
 
