--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@ section: home
         <div class="row">
             <div class="col-lg-4 ms-auto">
                 <p class="lead">
-                    Hi there, I'm Jason. For over 15 years I have worked in tech, building software and managing teams. I have held senior engineering leadership positions at Facebook, BP and VoucherCodes.
+                    Hi, I'm Jason. I've spent over 15 years building software and leading engineering teams, with senior roles at Facebook, BP, and VoucherCodes.
                     <br><br>
-                    As I gained more knowledge and experience in the industry, I realized that I wanted to use my skills to help others.
+                    These days, I work as a fractional CTO—partnering with founders to help turn their vision into reality.
                     <br><br>
-                    As a fractional CTO, I partner with businesses of all sizes and stages to help them develop and execute their technical strategies.
+                    Whether you're building your first product or scaling an existing one, I can help you make smart technical decisions, build a strong team and get things shipped.
                 </p>
             </div>
             <div class="col-lg-4 me-auto">
                 <p class="lead">                    
-                    I provide guidance and support on a wide range of topics, from hiring and managing engineers to building and launching products.
+                    I'm especially good at bridging the gap between business and tech, explaining complex ideas in plain English and helping you feel confident in your product and roadmap.
                     <br><br>
-                    I have a knack for explaining complex technical concepts in a way that is easy for non-technical stakeholders to understand.
+                    I've worked with numerous early-stage and seed-funded companies - including Y Combinator and Intel backed startups.
                     <br><br>
-                    I'd love to hear from you if this is something you're interested in.
+                    If you're looking for a trusted technical partner, I'd love to chat.
                 </p>
             </div>
         </div>
