--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ section: home
             </div>
             <div class="col-lg-4 me-auto">
                 <p class="lead">                    
-                    I'm especially good at bridging the gap between business and tech, explaining complex ideas in plain English and helping you feel confident in your product and roadmap.
+                    My role often involves bridging the gap between business and tech, explaining complex ideas in plain English and helping you feel confident in your product and roadmap.
                     <br><br>
                     I've worked with numerous early-stage and seed-funded companies - including Y Combinator and Intel backed startups.
                     <br><br>
